--- a/trial.ipynb
+++ b/trial.ipynb
@@ -50,37 +50,249 @@
    "source": [
     "import os\n",
     "import random\n",
+    "import shutil\n",
     "\n",
     "# Set the directories relative to the working directory\n",
-    "labels_dir = 'sen12floods_s1_labels'\n",
-    "source_dir = 'sen12floods_s1_source'\n",
+    "labels_dir = 'archive/sen12flood/sen12floods_s1_labels/sen12floods_s1_labels'\n",
+    "source_dir = 'archive/sen12flood/sen12floods_s1_source/sen12floods_s1_source'\n",
     "\n",
-    "# List and sort the label files for reproducibility\n",
-    "label_files = sorted(os.listdir(labels_dir))\n",
+    "# List and sort the label directories for reproducibility\n",
+    "label_dirs = sorted([d for d in os.listdir(labels_dir) if os.path.isdir(os.path.join(labels_dir, d))])\n",
     "\n",
-    "# Shuffle and select half of the files\n",
-    "random.shuffle(label_files)\n",
-    "num_to_delete = len(label_files) // 2\n",
-    "files_to_delete = label_files[:num_to_delete]\n",
+    "# Shuffle and select half of the directories to delete\n",
+    "random.shuffle(label_dirs)\n",
+    "num_to_delete = len(label_dirs) // 2\n",
+    "dirs_to_delete = label_dirs[:num_to_delete]\n",
     "\n",
-    "for filename in files_to_delete:\n",
-    "    label_path = os.path.join(labels_dir, filename)\n",
-    "    source_path = os.path.join(source_dir, filename)\n",
+    "deleted_pairs = 0\n",
+    "\n",
+    "for dirname in dirs_to_delete:\n",
+    "    label_path = os.path.join(labels_dir, dirname)\n",
+    "    # Replace label prefix with source prefix to form the corresponding source directory name\n",
+    "    source_dirname = dirname.replace(\"sen12floods_s1_labels\", \"sen12floods_s1_source\", 1)\n",
+    "    source_path = os.path.join(source_dir, source_dirname)\n",
     "    \n",
-    "    # Delete label file\n",
-    "    if os.path.exists(label_path):\n",
-    "        os.remove(label_path)\n",
-    "        print(f\"Deleted label: {label_path}\")\n",
+    "    # Only delete if both the label and source directories exist\n",
+    "    if os.path.isdir(label_path) and os.path.isdir(source_path):\n",
+    "        shutil.rmtree(label_path)\n",
+    "        shutil.rmtree(source_path)\n",
+    "        deleted_pairs += 1\n",
+    "        print(f\"Deleted pair: {label_path} and {source_path}\")\n",
     "    else:\n",
-    "        print(f\"Label file not found: {label_path}\")\n",
-    "        \n",
-    "    # Delete corresponding source file\n",
-    "    if os.path.exists(source_path):\n",
-    "        os.remove(source_path)\n",
-    "        print(f\"Deleted source: {source_path}\")\n",
-    "    else:\n",
-    "        print(f\"Source file not found: {source_path}\")"
+    "        print(f\"Skipping {dirname}: Pair not found (label exists: {os.path.isdir(label_path)}, source exists: {os.path.isdir(source_path)})\")\n",
+    "\n",
+    "print(f\"Total deleted pairs: {deleted_pairs}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total remaining pairs: 104\n"
+     ]
+    }
+   ],
+   "source": [
+    "remaining_pairs = 0\n",
+    "for dirname in os.listdir(labels_dir):\n",
+    "    label_path = os.path.join(labels_dir, dirname)\n",
+    "    if os.path.isdir(label_path):\n",
+    "        # Form the corresponding source directory name\n",
+    "        source_dirname = dirname.replace(\"sen12floods_s1_labels\", \"sen12floods_s1_source\", 1)\n",
+    "        source_path = os.path.join(source_dir, source_dirname)\n",
+    "        if os.path.isdir(source_path):\n",
+    "            remaining_pairs += 1\n",
+    "\n",
+    "print(f\"Total remaining pairs: {remaining_pairs}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "source_dir = 'archive/sen12flood/sen12floods_s1_source/sen12floods_s1_source'\n",
+    "deleted_count = 0\n",
+    "\n",
+    "for root, dirs, files in os.walk(source_dir):\n",
+    "    for file in files:\n",
+    "        if file == 'VV.tif':\n",
+    "            file_path = os.path.join(root, file)\n",
+    "            os.remove(file_path)\n",
+    "            deleted_count += 1\n",
+    "            print(f\"Deleted: {file_path}\")\n",
+    "\n",
+    "print(f\"Total VV.tif files deleted: {deleted_count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total labels with flooding true: 32\n",
+      "Total labels with flooding false: 72\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "\n",
+    "labels_root = 'archive/sen12flood/sen12floods_s1_labels/sen12floods_s1_labels'\n",
+    "flooding_true_count = 0\n",
+    "flooding_false_count = 0\n",
+    "\n",
+    "# Iterate through each subdirectory in the labels root directory\n",
+    "for dir_name in os.listdir(labels_root):\n",
+    "    dir_path = os.path.join(labels_root, dir_name)\n",
+    "    if os.path.isdir(dir_path):\n",
+    "        labels_geojson_path = os.path.join(dir_path, 'labels.geojson')\n",
+    "        if os.path.exists(labels_geojson_path):\n",
+    "            with open(labels_geojson_path, 'r') as f:\n",
+    "                data = json.load(f)\n",
+    "                flooding = data.get(\"properties\", {}).get(\"FLOODING\")\n",
+    "                if flooding is True:\n",
+    "                    flooding_true_count += 1\n",
+    "                elif flooding is False:\n",
+    "                    flooding_false_count += 1\n",
+    "        else:\n",
+    "            print(f\"File not found: {labels_geojson_path}\")\n",
+    "\n",
+    "print(\"Total labels with flooding true:\", flooding_true_count)\n",
+    "print(\"Total labels with flooding false:\", flooding_false_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image shape: torch.Size([1, 517, 513])\n",
+      "Flood label: tensor(0.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "import rasterio\n",
+    "import json\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torchvision import transforms\n",
+    "\n",
+    "class FloodDataset(Dataset):\n",
+    "    def __init__(self, source_dir, labels_dir, transform=None):\n",
+    "        self.source_dir = source_dir  # Directory that contains sample subdirectories\n",
+    "        self.labels_dir = labels_dir  # Directory that contains corresponding label subdirectories\n",
+    "        self.transform = transform\n",
+    "        \n",
+    "        # Get list of sample directories (sorted for consistency)\n",
+    "        self.sample_ids = sorted(os.listdir(source_dir))\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.sample_ids)\n",
+    "    \n",
+    "    def preprocess_sar(self, image):\n",
+    "        \"\"\"Apply log transformation and normalize to [-1,1].\"\"\"\n",
+    "        image = 10 * np.log10(image + 1e-6) + 50  # Log transformation\n",
+    "        image = (image - np.min(image)) / (np.max(image) - np.min(image))  # Normalize to [0,1]\n",
+    "        image = (image * 2) - 1  # Scale to [-1,1]\n",
+    "        return image.astype(np.float32)\n",
+    "    \n",
+    "    def get_flood_label(self, label_path):\n",
+    "        \"\"\"Read labels.geojson and return flood label (0 or 1).\"\"\"\n",
+    "        if not os.path.exists(label_path):\n",
+    "            print(f\"Warning: Missing label file {label_path}\")\n",
+    "            return 0  # Default to no flood if label is missing\n",
+    "        \n",
+    "        with open(label_path, \"r\") as f:\n",
+    "            label_data = json.load(f)\n",
+    "        return 1 if label_data[\"properties\"].get(\"FLOODING\", False) else 0\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        sample_id = self.sample_ids[idx]\n",
+    "        sample_dir = os.path.join(self.source_dir, sample_id)\n",
+    "        \n",
+    "        # Search recursively for VH.tif in the sample directory\n",
+    "        vh_file = None\n",
+    "        for root, dirs, files in os.walk(sample_dir):\n",
+    "            if \"VH.tif\" in files:\n",
+    "                vh_file = os.path.join(root, \"VH.tif\")\n",
+    "                break\n",
+    "        if vh_file is None:\n",
+    "            raise FileNotFoundError(f\"VH.tif not found in directory: {sample_dir}\")\n",
+    "        \n",
+    "        image_path = vh_file\n",
+    "        \n",
+    "        # Construct the label path.\n",
+    "        # We assume the label directory structure mirrors the source,\n",
+    "        # replacing \"sen12floods_s1_source\" with \"sen12floods_s1_labels\".\n",
+    "        label_subdir = sample_id.replace(\"sen12floods_s1_source\", \"sen12floods_s1_labels\")\n",
+    "        label_path = os.path.join(self.labels_dir, label_subdir, \"labels.geojson\")\n",
+    "        \n",
+    "        # Check if label file exists\n",
+    "        if not os.path.exists(label_path):\n",
+    "            print(f\"Warning: Missing label for {sample_id}, skipping.\")\n",
+    "            return self.__getitem__((idx + 1) % len(self.sample_ids))\n",
+    "        \n",
+    "        # Load SAR image\n",
+    "        with rasterio.open(image_path) as src:\n",
+    "            image = src.read(1).astype(np.float32)  # Read single-band VH SAR image\n",
+    "        image = self.preprocess_sar(image)\n",
+    "        \n",
+    "        # Load flood label\n",
+    "        flood_label = self.get_flood_label(label_path)\n",
+    "        \n",
+    "        # Convert to PyTorch tensors\n",
+    "        image = torch.tensor(image).unsqueeze(0)  # Add channel dimension (C, H, W)\n",
+    "        label = torch.tensor(flood_label, dtype=torch.float32)  # Scalar flood label\n",
+    "        \n",
+    "        return image, label\n",
+    "\n",
+    "\n",
+    "dataset = FloodDataset(\n",
+    "    source_dir=\"/home/alex/Desktop/miniproject/archive/sen12flood/sen12floods_s1_source/sen12floods_s1_source\", \n",
+    "    labels_dir=\"/home/alex/Desktop/miniproject/archive/sen12flood/sen12floods_s1_labels/sen12floods_s1_labels\"\n",
+    ")\n",
+    "dataloader = DataLoader(dataset, batch_size=8, shuffle=True)\n",
+    "\n",
+    "# Check a sample:\n",
+    "sample_image, sample_label = dataset[0]\n",
+    "print(\"Image shape:\", sample_image.shape)  # (1, H, W)\n",
+    "print(\"Flood label:\", sample_label)  # 0 or 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
