--- a/trial.ipynb
+++ b/trial.ipynb
@@ -177,14 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image shape: torch.Size([1, 517, 513])\n",
+      "Image shape: torch.Size([1, 512, 512])\n",
       "Flood label: tensor(0.)\n"
      ]
     }
@@ -196,15 +196,16 @@
     "import rasterio\n",
     "import json\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "from torchvision import transforms\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "class FloodDataset(Dataset):\n",
-    "    def __init__(self, source_dir, labels_dir, transform=None):\n",
-    "        self.source_dir = source_dir  # Directory that contains sample subdirectories\n",
-    "        self.labels_dir = labels_dir  # Directory that contains corresponding label subdirectories\n",
+    "    def __init__(self, source_dir, labels_dir, target_size=(512, 512), transform=None):\n",
+    "        self.source_dir = source_dir\n",
+    "        self.labels_dir = labels_dir\n",
+    "        self.target_size = target_size  # Fixed size for all images\n",
     "        self.transform = transform\n",
     "        \n",
-    "        # Get list of sample directories (sorted for consistency)\n",
+    "        # Get list of SAR image directories (sorted for consistency)\n",
     "        self.sample_ids = sorted(os.listdir(source_dir))\n",
     "        \n",
     "    def __len__(self):\n",
@@ -212,10 +213,23 @@
     "    \n",
     "    def preprocess_sar(self, image):\n",
     "        \"\"\"Apply log transformation and normalize to [-1,1].\"\"\"\n",
-    "        image = 10 * np.log10(image + 1e-6) + 50  # Log transformation\n",
-    "        image = (image - np.min(image)) / (np.max(image) - np.min(image))  # Normalize to [0,1]\n",
-    "        image = (image * 2) - 1  # Scale to [-1,1]\n",
+    "        # Apply log transformation first\n",
+    "        image = 10 * np.log10(image + 1e-6) + 50  # Avoid log(0)\n",
+    "        \n",
+    "        # Compute denominator safely\n",
+    "        img_min = np.min(image)\n",
+    "        img_max = np.max(image)\n",
+    "        denom = img_max - img_min\n",
+    "        if denom < 1e-6:\n",
+    "            # If the image has no contrast, set it to zeros\n",
+    "            image = np.zeros_like(image)\n",
+    "        else:\n",
+    "            image = (image - img_min) / denom  # Normalize to [0,1]\n",
+    "        \n",
+    "        # Scale to [-1,1]\n",
+    "        image = (image * 2) - 1\n",
     "        return image.astype(np.float32)\n",
+    "\n",
     "    \n",
     "    def get_flood_label(self, label_path):\n",
     "        \"\"\"Read labels.geojson and return flood label (0 or 1).\"\"\"\n",
@@ -231,7 +245,7 @@
     "        sample_id = self.sample_ids[idx]\n",
     "        sample_dir = os.path.join(self.source_dir, sample_id)\n",
     "        \n",
-    "        # Search recursively for VH.tif in the sample directory\n",
+    "        # Find VH.tif within the sample directory (search recursively)\n",
     "        vh_file = None\n",
     "        for root, dirs, files in os.walk(sample_dir):\n",
     "            if \"VH.tif\" in files:\n",
@@ -239,12 +253,9 @@
     "                break\n",
     "        if vh_file is None:\n",
     "            raise FileNotFoundError(f\"VH.tif not found in directory: {sample_dir}\")\n",
-    "        \n",
     "        image_path = vh_file\n",
     "        \n",
-    "        # Construct the label path.\n",
-    "        # We assume the label directory structure mirrors the source,\n",
-    "        # replacing \"sen12floods_s1_source\" with \"sen12floods_s1_labels\".\n",
+    "        # Construct label path by replacing source with labels in the directory name\n",
     "        label_subdir = sample_id.replace(\"sen12floods_s1_source\", \"sen12floods_s1_labels\")\n",
     "        label_path = os.path.join(self.labels_dir, label_subdir, \"labels.geojson\")\n",
     "        \n",
@@ -258,34 +269,321 @@
     "            image = src.read(1).astype(np.float32)  # Read single-band VH SAR image\n",
     "        image = self.preprocess_sar(image)\n",
     "        \n",
-    "        # Load flood label\n",
-    "        flood_label = self.get_flood_label(label_path)\n",
+    "        # Convert the numpy array to a torch tensor and add channel dimension: (1, H, W)\n",
+    "        image = torch.tensor(image).unsqueeze(0)\n",
+    "        # Resize image to target size (batch stacking requires same size)\n",
+    "        image = F.interpolate(image.unsqueeze(0), size=self.target_size, mode='bilinear', align_corners=False).squeeze(0)\n",
     "        \n",
-    "        # Convert to PyTorch tensors\n",
-    "        image = torch.tensor(image).unsqueeze(0)  # Add channel dimension (C, H, W)\n",
-    "        label = torch.tensor(flood_label, dtype=torch.float32)  # Scalar flood label\n",
+    "        # Load flood label (global scalar label: 0 or 1)\n",
+    "        flood_label = self.get_flood_label(label_path)\n",
+    "        label = torch.tensor(flood_label, dtype=torch.float32)\n",
     "        \n",
     "        return image, label\n",
     "\n",
-    "\n",
+    "# Example usage:\n",
+    "# Ensure these directories point to the folders that directly contain your sample subdirectories.\n",
     "dataset = FloodDataset(\n",
     "    source_dir=\"/home/alex/Desktop/miniproject/archive/sen12flood/sen12floods_s1_source/sen12floods_s1_source\", \n",
-    "    labels_dir=\"/home/alex/Desktop/miniproject/archive/sen12flood/sen12floods_s1_labels/sen12floods_s1_labels\"\n",
+    "    labels_dir=\"/home/alex/Desktop/miniproject/archive/sen12flood/sen12floods_s1_labels/sen12floods_s1_labels\",\n",
+    "    target_size=(512, 512)\n",
     ")\n",
     "dataloader = DataLoader(dataset, batch_size=8, shuffle=True)\n",
     "\n",
     "# Check a sample:\n",
     "sample_image, sample_label = dataset[0]\n",
-    "print(\"Image shape:\", sample_image.shape)  # (1, H, W)\n",
+    "print(\"Image shape:\", sample_image.shape)  # Expected: (1, 512, 512)\n",
     "print(\"Flood label:\", sample_label)  # 0 or 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UNet(\n",
+      "  (enc1): Sequential(\n",
+      "    (0): Conv2d(1, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (enc2): Sequential(\n",
+      "    (0): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (enc3): Sequential(\n",
+      "    (0): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (enc4): Sequential(\n",
+      "    (0): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (bottleneck): Sequential(\n",
+      "    (0): Conv2d(512, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(1024, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (upconv4): ConvTranspose2d(1024, 512, kernel_size=(2, 2), stride=(2, 2))\n",
+      "  (dec4): Sequential(\n",
+      "    (0): Conv2d(1024, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (upconv3): ConvTranspose2d(512, 256, kernel_size=(2, 2), stride=(2, 2))\n",
+      "  (dec3): Sequential(\n",
+      "    (0): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (upconv2): ConvTranspose2d(256, 128, kernel_size=(2, 2), stride=(2, 2))\n",
+      "  (dec2): Sequential(\n",
+      "    (0): Conv2d(256, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (upconv1): ConvTranspose2d(128, 64, kernel_size=(2, 2), stride=(2, 2))\n",
+      "  (dec1): Sequential(\n",
+      "    (0): Conv2d(128, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (final_conv): Conv2d(64, 1, kernel_size=(1, 1), stride=(1, 1))\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class UNet(nn.Module):\n",
+    "    def __init__(self, in_channels=1, out_channels=1):\n",
+    "        super(UNet, self).__init__()\n",
+    "        \n",
+    "        # Encoder\n",
+    "        self.enc1 = self.double_conv(in_channels, 64)\n",
+    "        self.enc2 = self.double_conv(64, 128)\n",
+    "        self.enc3 = self.double_conv(128, 256)\n",
+    "        self.enc4 = self.double_conv(256, 512)\n",
+    "        \n",
+    "        # Bottleneck\n",
+    "        self.bottleneck = self.double_conv(512, 1024)\n",
+    "        \n",
+    "        # Decoder\n",
+    "        self.upconv4 = self.upconv(1024, 512)\n",
+    "        self.dec4 = self.double_conv(1024, 512)\n",
+    "        self.upconv3 = self.upconv(512, 256)\n",
+    "        self.dec3 = self.double_conv(512, 256)\n",
+    "        self.upconv2 = self.upconv(256, 128)\n",
+    "        self.dec2 = self.double_conv(256, 128)\n",
+    "        self.upconv1 = self.upconv(128, 64)\n",
+    "        self.dec1 = self.double_conv(128, 64)\n",
+    "        \n",
+    "        # Output layer\n",
+    "        self.final_conv = nn.Conv2d(64, out_channels, kernel_size=1)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        # Encoder\n",
+    "        e1 = self.enc1(x)\n",
+    "        e2 = self.enc2(self.downsample(e1))\n",
+    "        e3 = self.enc3(self.downsample(e2))\n",
+    "        e4 = self.enc4(self.downsample(e3))\n",
+    "        \n",
+    "        # Bottleneck\n",
+    "        b = self.bottleneck(self.downsample(e4))\n",
+    "        \n",
+    "        # Decoder\n",
+    "        d4 = self.upconv4(b)\n",
+    "        d4 = torch.cat([d4, e4], dim=1)\n",
+    "        d4 = self.dec4(d4)\n",
+    "        \n",
+    "        d3 = self.upconv3(d4)\n",
+    "        d3 = torch.cat([d3, e3], dim=1)\n",
+    "        d3 = self.dec3(d3)\n",
+    "        \n",
+    "        d2 = self.upconv2(d3)\n",
+    "        d2 = torch.cat([d2, e2], dim=1)\n",
+    "        d2 = self.dec2(d2)\n",
+    "        \n",
+    "        d1 = self.upconv1(d2)\n",
+    "        d1 = torch.cat([d1, e1], dim=1)\n",
+    "        d1 = self.dec1(d1)\n",
+    "        \n",
+    "        # Output\n",
+    "        return torch.sigmoid(self.final_conv(d1))\n",
+    "    \n",
+    "    def double_conv(self, in_channels, out_channels):\n",
+    "        return nn.Sequential(\n",
+    "            nn.Conv2d(in_channels, out_channels, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(out_channels),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Conv2d(out_channels, out_channels, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(out_channels),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "        )\n",
+    "    \n",
+    "    def downsample(self, x):\n",
+    "        return F.max_pool2d(x, kernel_size=2, stride=2)\n",
+    "    \n",
+    "    def upconv(self, in_channels, out_channels):\n",
+    "        return nn.ConvTranspose2d(in_channels, out_channels, kernel_size=2, stride=2)\n",
+    "\n",
+    "# Example: Initialize the model\n",
+    "model = UNet(in_channels=1, out_channels=1)\n",
+    "print(model)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20: 100%|██████████| 52/52 [10:35<00:00, 12.22s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20, Loss: 0.6152, Epoch Time: 635.65 sec, Estimated Remaining Time: 12077.26 sec\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/20: 100%|██████████| 52/52 [10:21<00:00, 11.95s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/20, Loss: 0.6248, Epoch Time: 621.49 sec, Estimated Remaining Time: 11186.83 sec\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/20: 100%|██████████| 52/52 [2:13:03<00:00, 153.54s/it]    \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/20, Loss: 0.6033, Epoch Time: 7983.85 sec, Estimated Remaining Time: 135725.40 sec\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/20:  90%|█████████ | 47/52 [09:47<01:02, 12.42s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# Device configuration: use GPU if available\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Initialize the UNet model and move it to the device\n",
+    "model = UNet(in_channels=1, out_channels=1).to(device)\n",
+    "\n",
+    "# Define the loss function and optimizer\n",
+    "criterion = nn.BCELoss()  # Binary Cross-Entropy Loss\n",
+    "optimizer = optim.Adam(model.parameters(), lr=1e-3)\n",
+    "\n",
+    "# Update DataLoader settings to reduce memory usage\n",
+    "# Using a smaller batch size and num_workers=0 ensures minimal memory load.\n",
+    "dataloader = DataLoader(dataset, batch_size=2, shuffle=True, num_workers=0)\n",
+    "\n",
+    "num_epochs = 20\n",
+    "total_start_time = time.time()\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    epoch_start = time.time()\n",
+    "    model.train()\n",
+    "    running_loss = 0.0\n",
+    "\n",
+    "    for images, labels in tqdm(dataloader, desc=f\"Epoch {epoch+1}/{num_epochs}\"):\n",
+    "        images = images.to(device)\n",
+    "        # Adjust labels shape to (batch, 1)\n",
+    "        labels = labels.to(device).unsqueeze(1)\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        # Forward pass: model outputs shape (batch, 1, H, W)\n",
+    "        outputs = model(images)\n",
+    "        \n",
+    "        # Global average pooling to get a single prediction per image\n",
+    "        outputs = torch.mean(outputs, dim=(2,3))  # Now shape: (batch, 1)\n",
+    "        \n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        running_loss += loss.item() * images.size(0)\n",
+    "    \n",
+    "    epoch_time = time.time() - epoch_start\n",
+    "    epoch_loss = running_loss / len(dataset)\n",
+    "    remaining_epochs = num_epochs - epoch - 1\n",
+    "    estimated_remaining_time = remaining_epochs * epoch_time\n",
+    "    print(f\"Epoch {epoch+1}/{num_epochs}, Loss: {epoch_loss:.4f}, Epoch Time: {epoch_time:.2f} sec, \"\n",
+    "          f\"Estimated Remaining Time: {estimated_remaining_time:.2f} sec\")\n",
+    "\n",
+    "total_time = time.time() - total_start_time\n",
+    "print(f\"Training complete in {total_time/60:.2f} minutes.\")\n",
+    "\n",
+    "torch.save(model.state_dict(), \"unet_flood_model.pth\")\n",
+    "print(\"Model saved as unet_flood_model.pth\")\n"
+   ]
   },
   {
    "cell_type": "code",
